# wgpu-particle-demo

./: Cargo.toml  README.md  run-wasm.sh
src/: compute.wgsl  frag_vert.wgsl  gfx_ctx.rs  idk.wgsl  main.rs  pipelines.rs
wasm-resources/: index.template.html
